# Anki-MCP

./: .gitignore  README.md  SPIKE_EMBEDDINGS.md  pyproject.toml
acm/: __init__.py  cli.py  config.py  mcp_server.py  models.py  service.py
acm/anki/: client.py  exporter.py  indexer.py
acm/pipeline/: auditor.py  classifier.py  duplicate_audit.py  embeddings.py  llm.py  normalizer.py  propagation.py  quality.py  review_stats.py  similarity.py  taxonomy_suggest.py
acm/store/: registry.py
config/: settings.yaml  taxonomy.yaml
mcp-backlog/: 01-review-stats-extraction.md  02-retention-by-tag.md  03-leech-clustering.md  04-repair-mode.md  05-periodic-report.md  06-enablers.md  07-front-hygiene-token-economy.md  README.md
scripts/: spike_knn.py  validate_real.py
tests/: test_annotation.py  test_auditor.py  test_classifier.py  test_config.py  test_consolidation.py  test_dedup_precision.py  test_deduper.py  test_embeddings_engine.py  test_llm.py  test_maintenance.py  test_mcp_classify.py  test_normalizer.py  test_paths.py  test_review_queue.py  test_review_stats.py  test_similarity.py  test_taxonomy_suggest.py
