[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-card-manager"
version = "0.1.0"
description = "CLI local para gestionar tarjetas Anki con normalización, deduplicación y sync via AnkiConnect"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13",
    "pyyaml>=6",
    "mcp[cli]>=1.0",
]

[project.scripts]
acm = "acm.cli:app"
acm-mcp = "acm.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
include = ["acm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
